added: default admin

--- a/wp-content/themes/MyTheme/style.css
+++ b/wp-content/themes/MyTheme/style.css
@@ -25,18 +25,28 @@ a {
 nav {
 	padding: 20px;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	background: #f8f8f8;
 }
-nav a {
+nav > a {
 	color: dodgerblue;
 	display: flex;
 	align-items: center;
 	gap: 10px;
 	font-size: 18px;
 }
-nav a h3 {
+nav > a h3 {
 	font-size: 18px;
+}
+nav .nav-links {
+	display: flex;
+	align-items: center;
+	gap: 4px;
+}
+nav .nav-links a {
+	font-size: 14px;
+	text-decoration: underline;
 }
 
 .form-con {
@@ -100,7 +110,7 @@ nav a h3 {
 	font-size: 15px;
 }
 .custom-btn {
-	width: 280px;
+	width: 100%;
 	padding: 7px 20px;
 	background: #0071dc;
 	color: #fff;
@@ -132,22 +142,22 @@ footer {
 	width: 100%;
 }
 
-.success {
-	background: rgba(47, 204, 68, 0.2);
+.success,
+.error {
 	width: fit-content;
-	padding: 10px;
-	color: rgb(28, 163, 46);
 	border-radius: 5px;
 	font-weight: 600;
+	padding: 10px;
+}
+
+.success {
+	background: rgba(47, 204, 68, 0.2);
+	color: rgb(28, 163, 46);
 }
 
 .error {
 	background: rgba(204, 60, 47, 0.2);
-	width: fit-content;
-	padding: 10px;
 	color: rgb(150, 40, 30);
-	border-radius: 5px;
-	font-weight: 600;
 }
 
 .success:empty,
@@ -155,9 +165,12 @@ footer {
 	display: none;
 	padding: 0;
 }
+.form-error {
+	margin-bottom: 10px;
+}
 
 .container {
-	margin: 20px;
+	margin: 20px 40px;
 }
 .page-title {
 	margin: 10px 10px 0;
@@ -209,6 +222,126 @@ td {
 	text-align: center;
 }
 
+table button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	gap: 4px;
+	border: none;
+	font-weight: 500;
+	padding: 4px 5px;
+	border-radius: 5px;
+	background: dodgerblue;
+	color: #fff;
+	font-size: 15px;
+	cursor: pointer;
+}
+
+/* 
+Admin view
+*/
+.top-links {
+	display: flex;
+	gap: 10px;
+	padding: 20px;
+}
+.top-links button {
+	background: dodgerblue;
+	color: #fff;
+	font-size: 16px;
+	padding: 8px 12px;
+	border: none;
+	font-weight: 500;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.title-con {
+	display: flex;
+	align-items: baseline;
+	gap: 10px;
+}
+
+.title-con a {
+	color: rgb(180, 20, 10);
+}
+/* 
+.success,
+.error {
+	width: fit-content;
+	border-radius: 5px;
+	font-weight: 600;
+	padding: 10px;
+}
+
+.success {
+	background: rgba(47, 204, 68, 0.2);
+	color: rgb(28, 163, 46);
+}
+
+.error {
+	background: rgba(204, 60, 47, 0.2);
+	color: rgb(150, 40, 30);
+}
+
+.success:empty,
+.error:empty {
+	display: none;
+	padding: 0;
+} */
+
+/* .container {
+	margin-right: 20px;
+} */
+
+h2 {
+	margin-top: 30px;
+	color: #636564;
+	width: fit-content;
+	padding: 6px 10px;
+	border-radius: 4px;
+	background: #ddd;
+}
+
+.active-tickets h2 {
+	background: #49af41;
+	color: #fff;
+}
+
+table {
+	font-size: 15px;
+	width: 100%;
+	border-collapse: collapse;
+}
+
+table,
+th,
+td {
+	border: 2px solid #ddd;
+}
+
+th,
+td {
+	text-align: left;
+	padding: 8px;
+}
+
+/* .minimal {
+	min-width: max-content;
+} */
+
+/* .empty-list {
+	opacity: 0.5;
+	background: rgba(120, 120, 120, 0.1);
+	font-weight: 500;
+	text-align: center;
+} */
+
+.btn-col {
+	width: 70px;
+}
+/* 
 button {
 	display: flex;
 	align-items: center;
@@ -221,11 +354,12 @@ button {
 	border-radius: 5px;
 	color: white;
 	cursor: pointer;
+} */
+
+.edit-btn {
+	background: dodgerblue;
 }
 
-td button {
-	background: none;
-	color: #000;
-	font-size: 20px;
-	padding: 0;
+.delete-btn {
+	background: tomato;
 }
